@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 16:31:23 2008
-# Current time GMT:   Thu Mar 20 07:31:23 2008
+# Current time local: Thu Mar 20 17:02:23 2008
+# Current time GMT:   Thu Mar 20 08:02:23 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
