@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 16:31:11 2008
-# Current time GMT:   Thu Mar 20 07:31:11 2008
+# Current time local: Thu Mar 20 17:02:12 2008
+# Current time GMT:   Thu Mar 20 08:02:12 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
