@@ -1,5 +1,10 @@
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* Atom.pm: Support for |<content type=html>| content
+	checking.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* Atom.pm: Support for |author| for |feed| checking.
 
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
