@@ -1,5 +1,10 @@
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src (set_inner_html): Line/column number
+	code was old one yet.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Better line/column reporting for "duplicate attribute"
 	errors.  Line/column markings for DOCTYPE, comment, and
 	character tokens are reintroduced; otherwise,
